<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/group"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_create_project"
                android:icon="@drawable/ic_add_circle"
                android:title="@string/create_project"/>
        <item
                android:id="@+id/nav_projects"
                android:icon="@drawable/ic_folder"
                android:title="@string/projects"/>
        <item
                android:id="@+id/nav_tasks"
                android:icon="@drawable/ic_task"
                android:title="@string/tasks"/>
        <item
                android:id="@+id/nav_bucket"
                android:icon="@drawable/ic_delete"
                android:title="@string/bucket"/>
    </group>
</menu>
