<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="ProjectBinding">

        <variable
                name="vm"
                type="com.ext1se.notepad.ui.projects.ProjectViewModel" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <androidx.cardview.widget.CardView
                        style="@style/AttributeCardViewStyle"
                        android:id="@+id/card_icon_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:id="@+id/ll_icon"
                            style="@style/AttributeItemStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingTop="@dimen/attribute_single_padding"
                            android:paddingBottom="@dimen/attribute_single_padding">

                        <com.ext1se.dialog.icon_dialog.IconView
                                android:id="@+id/icon"
                                android:layout_width="@dimen/attribute_icon_size"
                                android:layout_height="@dimen/attribute_icon_size"
                                app:idIcon="@{vm.idIcon}"
                                app:tint="@color/colorDefault"
                                tools:srcCompat="@drawable/ic_ok" />

                        <TextView
                                style="@style/AttributeTitleStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="@dimen/attribute_padding"
                                android:paddingEnd="@dimen/attribute_padding"
                                android:text="@string/project_icon_advice" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        style="@style/AttributeCardViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:id="@+id/ll_color"
                            style="@style/AttributeItemStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingTop="@dimen/attribute_single_padding"
                            android:paddingBottom="@dimen/attribute_single_padding">

                        <ImageView
                                android:id="@+id/color"
                                android:layout_width="@dimen/attribute_icon_size"
                                android:layout_height="@dimen/attribute_icon_size"
                                app:srcCompat="@drawable/ic_color"
                                app:tint="@color/colorDefault" />

                        <TextView
                                style="@style/AttributeTitleStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="@dimen/attribute_padding"
                                android:paddingEnd="@dimen/attribute_padding"
                                android:text="@string/project_color_advice" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:id="@+id/card_task"
                        style="@style/AttributeCardViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <LinearLayout
                            android:id="@+id/ll_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingStart="@dimen/attribute_padding_horizontal"
                            android:paddingTop="@dimen/attribute_padding"
                            android:paddingEnd="@dimen/attribute_padding_horizontal"
                            android:paddingBottom="@dimen/attribute_padding">

                        <EditText
                                android:id="@+id/et_title"
                                style="@style/AttributeEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/task_title"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:nextFocusDown="@+id/et_description"
                                android:text="@={vm.project.name}"
                                android:textStyle="bold"/>


                        <EditText
                                android:id="@+id/et_description"
                                style="@style/AttributeEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="@null"
                                android:hint="@string/task_description"
                                android:inputType="textCapSentences|textMultiLine"
                                android:overScrollMode="always"
                                android:scrollbars="vertical"
                                android:text="@={vm.project.description}" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="12dp"
                android:visibility="gone"
                app:color="@{vm.idColorTheme}"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_ok"
                tools:backgroundTint="@color/blackLight" />
    </RelativeLayout>
</layout>