<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="TaskBinding">

        <variable
                name="vm"
                type="com.ext1se.notepad.ui.tasks.TaskViewModel" />
    </data>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <androidx.cardview.widget.CardView
                        android:id="@+id/card_project"
                        style="@style/AttributeCardViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/attribute_padding">

                        <com.ext1se.dialog.icon_dialog.IconView
                                android:id="@+id/icon_project"
                                android:layout_width="@dimen/attribute_icon_size"
                                android:layout_height="@dimen/attribute_icon_size"
                                app:idIcon="@{vm.selectedProject.idIcon}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/colorDefault"
                                tools:srcCompat="@drawable/ic_ok" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingStart="@dimen/attribute_padding"
                                android:paddingEnd="@dimen/attribute_padding"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/icon_project"
                                app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                    style="@style/AttributeTitleStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/project"
                                    android:textStyle="bold" />

                            <TextView
                                    android:id="@+id/tv_project_title"
                                    style="@style/BaseTextStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{vm.selectedProject.name}"
                                    tools:text="Работа" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:id="@+id/card_task"
                        style="@style/AttributeCardViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    <LinearLayout
                            android:id="@+id/ll_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            android:paddingTop="@dimen/attribute_padding"
                            android:paddingEnd="16dp"
                            android:paddingBottom="@dimen/attribute_padding">

                        <EditText
                                android:id="@+id/et_title"
                                style="@style/AttributeEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/task_title"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:nextFocusDown="@+id/et_description"
                                android:text="@={vm.task.name}"
                                android:textStyle="bold"></EditText>


                        <EditText
                                android:id="@+id/et_description"
                                style="@style/AttributeEditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="@null"
                                android:hint="@string/task_description"
                                android:inputType="textCapSentences|textMultiLine"
                                android:overScrollMode="always"
                                android:scrollbars="vertical"
                                android:text="@={vm.task.description}" />


                        <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:listitem="@layout/item_subtask"
                                />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        style="@style/AttributeCardViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="8dp">

                        <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:hint="Add new task"
                                android:textSize="16sp" />

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                app:srcCompat="@drawable/ic_send" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="12dp"
                android:visibility="gone"
                app:color="@{vm.idColorTheme}"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_ok"
                tools:backgroundTint="@color/blackLight" />
    </RelativeLayout>
</layout>